# IndieGoUI

./: .gitignore  IndieGoUI.cpp  IndieGoUI.h  IndieGoUI.pb.cc  IndieGoUI.pb.h  IndieGoUI.proto  README.md  env.ps1
.github/workflows/: README.md  cmake.yml
backends/: README.md
backends/Nuklear/: fragment.glsl  nuklear.h  nuklear_glfw_gl3.h  renderer.cpp  shader_codes.h  shaders.h  vertex.glsl
backends/Nuklear/glad/: glad.h
backends/imgui/: renderer.cpp
backends/imgui/examples/example_glfw_opengl3/: imgui.ini  main.cpp
backends/imgui/examples/libs/glfw/lib-vc2010-32/: IEglfw3_symbols.txt  glfw3_symbols.txt
custom_shader_test/: CMakeLists.txt
custom_shader_test/src/: app.cpp
docs/: backend_itegration.md
example_app/: CMakeLists.txt  README.md  imgui.ini  ui_example_app.indg
example_app/OpenGL/: CMakeLists.txt  imgui.ini
example_app/OpenGL/src/: app.cpp  app_nuklear.cpp  glad.c
example_app/src/: app.cpp
os/glad/: glad.h
protobuf/src/google/protobuf/: any_test.pb.cc  any_test.pb.h  map_lite_unittest.pb.cc  map_lite_unittest.pb.h  map_proto2_unittest.pb.cc  map_proto2_unittest.pb.h  map_unittest.pb.cc  map_unittest.pb.h  unittest.pb.cc  unittest.pb.h  unittest_arena.pb.cc  unittest_arena.pb.h  unittest_custom_options.pb.cc  unittest_custom_options.pb.h  unittest_drop_unknown_fields.pb.cc  unittest_drop_unknown_fields.pb.h  unittest_embed_optimize_for.pb.cc  unittest_embed_optimize_for.pb.h  unittest_empty.pb.h  unittest_enormous_descriptor.pb.cc  unittest_import.pb.cc  unittest_import.pb.h  unittest_import_lite.pb.cc  unittest_import_lite.pb.h  unittest_import_public.pb.cc  unittest_import_public.pb.h  unittest_import_public_lite.pb.cc  unittest_import_public_lite.pb.h  unittest_lazy_dependencies.pb.cc  unittest_lazy_dependencies.pb.h  unittest_lazy_dependencies_custom_option.pb.cc  unittest_lazy_dependencies_custom_option.pb.h  unittest_lazy_dependencies_enum.pb.h  unittest_lite.pb.cc  unittest_lite.pb.h  unittest_lite_imports_nonlite.pb.cc  unittest_lite_imports_nonlite.pb.h  unittest_mset.pb.cc  unittest_mset.pb.h  unittest_mset_wire_format.pb.cc  (+23 more)
protobuf/src/google/protobuf/compiler/cpp/: test_bad_identifiers.pb.cc  test_bad_identifiers.pb.h  test_large_enum_value.pb.cc  test_large_enum_value.pb.h
protobuf/src/google/protobuf/util/: json_format.pb.cc  json_format.pb.h  json_format_proto3.pb.cc  json_format_proto3.pb.h  message_differencer_unittest.pb.cc  message_differencer_unittest.pb.h
protobuf/src/google/protobuf/util/internal/testdata/: anys.pb.cc  anys.pb.h  books.pb.cc  books.pb.h  default_value.pb.cc  default_value.pb.h  default_value_test.pb.cc  default_value_test.pb.h  field_mask.pb.cc  field_mask.pb.h  maps.pb.cc  maps.pb.h  oneofs.pb.cc  oneofs.pb.h  proto3.pb.cc  proto3.pb.h  struct.pb.cc  struct.pb.h  timestamp_duration.pb.cc  timestamp_duration.pb.h  wrappers.pb.cc  wrappers.pb.h
test/: CMakeLists.txt  main.cpp
test_app/: CMakeLists.txt
test_app/src/: app.cpp
ui_editor/: CMakeLists.txt  README.md  editor_data.pb.cc  editor_data.pb.h  editor_data.proto  style_ref.c
ui_editor/layout_shader/: fragment.glsl  geometry.glsl  vertex.glsl
ui_editor/lib/Darwin/: libglfw.3.dylib
ui_editor/skinning_shader/: fragment.glsl  geometry.glsl  vertex.glsl
ui_editor/src/: Shader.cpp  Shader.h  app.cpp  callbacks.cpp  editor_structs.h  helper_drawing.cpp  init.cpp  layout_drawing.cpp  skinning.cpp  ui.cpp
